--- a/GeoLayout.Domain/GeoLayout.Domain.csproj
+++ b/GeoLayout.Domain/GeoLayout.Domain.csproj
@@ -51,15 +51,20 @@
     <Compile Include="Data\Group.cs" />
     <Compile Include="Data\Waypoint.cs" />
     <Compile Include="Data\WaypointGroupWrapper.cs" />
+    <Compile Include="Data\XyInt.cs" />
+    <Compile Include="Helpers\CoordinateConverter.cs" />
     <Compile Include="Helpers\GridHelper.cs" />
+    <Compile Include="IO\FileTypeInfo.cs" />
     <Compile Include="IO\GpxExporter.cs" />
+    <Compile Include="IO\IFileTypeInfo.cs" />
     <Compile Include="IO\IGeoExporter.cs" />
     <Compile Include="IO\IGeoImporter.cs" />
     <Compile Include="IO\GpxImporter.cs" />
     <Compile Include="Factories\GridFactory.cs" />
     <Compile Include="Factories\ProfileFactory.cs" />
+    <Compile Include="IO\MultiFileDialogResult.cs" />
+    <Compile Include="IO\SaveFileDialogResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Helpers\WaypointHelpers.cs" />
     <Compile Include="Helpers\WgsUtmConverter.cs" />
   </ItemGroup>
   <ItemGroup />
